[package]
name = "refrences-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
etcetera = "0.8.0"
gouqi = "0.9.0"
log = "0.4.22"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.133"
stderrlog = "0.6.0"
thiserror = "2.0.9"
toml = "0.8.19"
yare = "3.0.0"
